--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "geocoder": "^0.2.2",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.7",
     "morgan": "^1.8.1",
