--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.15.1",
     "geocoder": "^0.2.2",
     "method-override": "^2.3.7",
+    "moment": "^2.18.1",
     "mongoose": "^4.8.7",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
