--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "connect-flash": "^0.1.1",
+    "cookies-js": "^1.2.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "geocoder": "^0.2.2",
+    "js-cookie": "^2.1.3",
     "method-override": "^2.3.7",
     "moment": "^2.18.1",
     "mongoose": "^4.8.7",
